upgrade to api version 1.0.1
